# LuminPro

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  DEVELOPMENT.md  NOTE.txt  README.md  README_en.md  SHA256SUMS  action.sh  boost.sh  build-module.js  changelog.md  config.prop  customize.sh  deploy.ps1  index.html  module.prop  package-lock.json  package.json  pnpm-lock.yaml  service.sh  uninstall.sh  update.json  vite.config.js
.github/workflows/: build-android.yml
config/: config.json
config/path/: max_bri_file.txt  now_bri_file.txt
docs/: webui-api.md  webui.md
more/: module.prop.template
rust/: Cargo.toml
rust/src/: main.rs
script/: action.sh  daemon.sh  restart.sh  setup.sh  start.sh  stop.sh  up.sh
scrpt/: action.sh
src/: main.js  style.css
webroot/: index.html
webroot/assets/: index-BaxEqPXO.css  index-Berty6Q2.css  index-BjK9R0FR.js  index-CRYvfSfT.css  index-CUDfuwAt.js  index-C_PcQXDT.js  index-CumoKyZM.css  index-DAJ7hj2r.css  index-DfP8X78P.js  index-DpSbbGTK.css  index-GvCaVVmw.js  index-_esaoEhK.js
webui/: components.json  index.html  vite.config.js
webui/src/: App.vue  about.css  apps.css  apps.js  components.css  header.css  index.css  log.css  main.js  style.css  utils.js
webui/src/components/: BottomNav.vue
webui/src/components/ui/: Badge.vue  Button.vue  Card.vue  Input.vue  Label.vue  Separator.vue  Switch.vue  Textarea.vue
webui/src/composables/: useApps.js  useConfig.js  useLog.js  useStatus.js
webui/src/views/: AboutView.vue  AppsView.vue  ConfigView.vue  LogView.vue  StatusView.vue
