[package]
name = "lumipro"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lumipro"
path = "src/main.rs"

# Linux/Android 专用依赖（本地 Windows 不编译，仅 GitHub Actions 使用）
[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.10"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
